# rust-axum-boilerplate

./: .env  .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yaml  prometheus.yaml  rustfmt.toml
.bruno/: index.bru  login.bru  refresh-token.bru  sign-up.bru  users.bru
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/user/: model.rs  repository.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  logger.rs  main.rs  router.rs
crates/server/src/api/: mod.rs  user_controller.rs
crates/server/src/dtos/: mod.rs  user_dto.rs
crates/server/src/extractors/: validation_extractor.rs
crates/server/src/services/: mod.rs  user_service.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  cookie.rs  errors.rs  jwt.rs  lib.rs  password.rs
crates/utils/src/config/: db_config.rs  jwt_config.rs  log_config.rs  mod.rs  server_config.rs
